yarte/tests/fails/user-compile-error.stderr
error: proc-macro derive panicked
 --> $DIR/user-compile-error.rs:3:10
  |
3 | #[derive(Template)]
  |          ^^^^^^^^
  |
  = help: message: error
           --> $DIR/Test.hbs:1:7
            |
          1 | {{#if true.is_some() }}
            |       ^^^^^^^^^^^^^^ Compile error: OMG! true is some
            |
